objects/Releases__c.object
<CustomObject>
    <description>Wrapper for SW Releases</description>
    <fields>
        <fullName>EULA_Agreement__c</fullName>
        <formula>&apos;By downloading this software you agree to the terms of the EULA here: http://www.silver-peak.com/download/latest/EULA.html&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EULA Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_Details__c</fullName>
        <label>Release Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_Status__c</fullName>
        <label>Release Status</label>
        <picklist>
            <picklistValues>
                <fullName>BETA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <inlineHelpText>format x.y</inlineHelpText>
        <label>Release Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>VXOA Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX Image</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GX-V Image</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO Image</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EdgeConnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Release__c</columns>
        <columns>Release_Date__c</columns>
        <columns>Release_Status__c</columns>
        <columns>Release_Details__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GMS_Releases</fullName>
        <columns>NAME</columns>
        <columns>Release_Date__c</columns>
        <columns>Release__c</columns>
        <columns>Release_Status__c</columns>
        <columns>Release_Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>GMS</value>
        </filters>
        <label>GMS Releases</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VXOA_Releases</fullName>
        <columns>NAME</columns>
        <columns>Release_Date__c</columns>
        <columns>Release__c</columns>
        <columns>Release_Status__c</columns>
        <columns>Release_Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>VXOA Release</value>
        </filters>
        <label>VXOA Releases</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VX_Image</fullName>
        <columns>NAME</columns>
        <columns>Release_Date__c</columns>
        <columns>Release__c</columns>
        <columns>Release_Status__c</columns>
        <columns>Release_Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>VX Image,GX-V Image,ISO Image</value>
        </filters>
        <label>Virtual Appliance Packages</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
            <allInternalUsers></allInternalUsers>
            <group>GXVBeta</group>
            <group>VXBeta</group>
            <portalRole>SilverPeakSystemsCustomerManager</portalRole>
            <portalRole>SilverPeakSystemsCustomerUser1</portalRole>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>